# reddit-sentiment

./: .gitignore  LICENSE.md  README.md  main.py  process_dataset.py  pyproject.toml  requirements.txt  setup.py  single_year.py
analysis/: correlation_test.ipynb  dataset_description.ipynb  dataset_description_polars.ipynb  requirements.txt
reddit_sentiment/: annotate.py  preprocess.py  preprocess_archive.sh
reddit_sentiment/scripts/: distill_dataset.py  download_annotate_archive.py  download_annotate_archives.py
