[tool.poetry]
name = "reddit-sentiment"
version = "0.1.0"
description = "Software to create a reddit sentiment corpus"
authors = ["Lennard Berger <3730888+Fohlen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "reddit_sentiment"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.28.1"
textblob = ">=0.17.1"
tqdm = ">=4.64.1"
pyspark = ">=3.3.0"

[tool.poetry.scripts]
distill-dataset = "reddit_sentiment.scripts.distill_dataset:main"
download-annotate-archive = "reddit_sentiment.scripts.download_annotate_archive:main"
download-annotate-archives = "reddit_sentiment.scripts.download_annotate_archives:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
